--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.5.2",
     "@saleor/macaw-ui": "^0.1.1-9",
-    "@types/faker": "^5.1.6",
     "@sentry/react": "^6.0.0",
+    "@types/faker": "^5.1.6",
     "apollo": "^2.21.2",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
@@ -36,6 +36,7 @@
     "apollo-link-batch-http": "^1.2.12",
     "apollo-link-context": "^1.0.18",
     "apollo-link-error": "^1.1.11",
+    "apollo-link-token-refresh": "^0.3.2",
     "apollo-upload-client": "^9.1.0",
     "classnames": "^2.2.6",
     "crc-32": "^1.2.0",
