--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: "14.x"
       - name: Cache node modules
         uses: actions/cache@v2
         env:
